@@ -34,6 +34,7 @@ const BASS_BFX_FREEVERB BASS_ReverbTypes[(int)ReverbType::Count] =    // Reverb 
   {  1.0f,     0.25f,     0.90f,    1.00f,    1.0f,     0,      -1     }	// 4 = Pipe
 };
 
+const  std::string TRACKS_EXTENSIONS[] = {".wav", ".ogg", ".mp3"};
 const  std::string TRACKS_PATH = "Audio/";
 static std::string FullAudioDirectory;
 
@@ -496,19 +497,21 @@ void PlaySoundTrack(const std::string& track, SoundTrackType mode, QWORD positio
 		break;
 	}
 
-	auto fullTrackName = FullAudioDirectory + track + ".ogg";
+	auto fullTrackName = std::filesystem::path(FullAudioDirectory + track);
+	if (!fullTrackName.has_extension() || !std::filesystem::is_regular_file(fullTrackName))
+	{
+		for (auto& extension : TRACKS_EXTENSIONS)
+		{
+			fullTrackName.replace_extension(extension);
+			if (std::filesystem::is_regular_file(fullTrackName))
+				break;
+		}
+	}
+
 	if (!std::filesystem::is_regular_file(fullTrackName))
 	{
-		fullTrackName = FullAudioDirectory + track + ".mp3";
-		if (!std::filesystem::is_regular_file(fullTrackName))
-		{
-			fullTrackName = FullAudioDirectory + track + ".wav";
-			if (!std::filesystem::is_regular_file(fullTrackName))
-			{
-				TENLog("No soundtrack files with name '" + track + "' were found", LogLevel::Warning);
-				return;
-			}
-		}
+		TENLog("No soundtrack files with name '" + fullTrackName.stem().string() + "' were found", LogLevel::Warning);
+		return;
 	}
 
 	if (channelActive)
@@ -516,7 +519,7 @@ void PlaySoundTrack(const std::string& track, SoundTrackType mode, QWORD positio
 
 	auto stream = BASS_StreamCreateFile(false, fullTrackName.c_str(), 0, 0, flags);
 
-	if (Sound_CheckBASSError("Opening soundtrack '%s'", false, fullTrackName.c_str()))
+	if (Sound_CheckBASSError("Opening soundtrack '%s'", false, fullTrackName.filename().string().c_str()))
 		return;
 
 	float masterVolume = (float)GlobalMusicVolume / 100.0f;
@@ -556,7 +559,7 @@ void PlaySoundTrack(const std::string& track, SoundTrackType mode, QWORD positio
 	if (position && (BASS_ChannelGetLength(stream, BASS_POS_BYTE) > position))
 		BASS_ChannelSetPosition(stream, position, BASS_POS_BYTE);
 
-	if (Sound_CheckBASSError("Playing soundtrack '%s'", true, fullTrackName.c_str()))
+	if (Sound_CheckBASSError("Playing soundtrack '%s'", true, fullTrackName.filename().string().c_str()))
 		return;
 
 	SoundtrackSlot[(int)mode].Channel = stream;
